src/components/relatedQuestion/relatedQuestion.module.less
@import "../../css/variables/responsive.less";
@import "../../css/variables/color.less";
@import "../../css/variables/main.less";

h2.title {
  /* H3/Bold */

  font-family: Inter;
  font-style: normal;
  font-weight: bold;
  font-size: 32px;
  line-height: 42px;

  color: @color-black;
}

.faqLinks {
  h3.subTitle {
    /* H6/Regular */

    font-family: Inter;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 24px;

    color: @color-black;
  }
}

.container {
  width: fit-content;

  .item,
  .link {
    cursor: pointer;

    font-family: Inter;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 24px;

    color: @text-blue;
  }
}

.btnGroups {
  display: flex;
  gap: 10px;
  padding: 20px 0;

  .sBtn {
    .secondaryBtnSm;

    display: flex;
    align-items: center;
    justify-content: center;
  }
}

.isMobile {
  .btnGroups {
    flex-direction: column;
  }
}

.link {
  align-items: flex-start;
}

